# emacs-tart

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUGS.md  DESIGN.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  README.md  dune-project  flake.nix  prek.toml  tart  tart.opam
.ralph/: IMPLEMENTATION_PLAN.md
docs/: cli-reference.adoc  cli-reference.md  dune  getting-started.adoc  getting-started.md  library-authors.adoc  tooling-setup.adoc  tooling-setup.md
docs/reference/: design-proposals.md  eli-format.md  synthesis.md  tart-format.md  type-system.md  writing-typings.md
docs/research/: algorithm-w.md  elisp-analysis.md  elisp-calling-conventions.md  elisp-data-structures.md  elisp-ecosystem.md  elisp-existing-types.md  elisp-macro-patterns.md  elisp-special-forms.md  flow-hack.md  gradual-typing.md  lsp-patterns.md  macro-typing.md  ocaml-implementation.md  system-f-foundations.md  typed-racket.md
docs/research/tapl/: let-polymorphism.md  system-f.md
lib/: dune  error.ml  error.mli  tart.ml  tart.mli
lib/cache/: content_cache.ml  content_cache.mli  dune
lib/core/: dune  type_env.ml  type_env.mli  types.ml  types.mli
lib/corpus/: dune  emacs_corpus.ml  emacs_corpus.mli
lib/coverage/: c_scanner.ml  c_scanner.mli  coverage_report.ml  coverage_report.mli  coverage_table.ml  coverage_table.mli  definition_extractor.ml  definition_extractor.mli  dune  emacs_coverage.ml  emacs_coverage.mli  emacs_source.ml  emacs_source.mli  file_scanner.ml  file_scanner.mli  report_format.ml  report_format.mli  verbose_log.ml  verbose_log.mli
lib/errors/: dune  file_error.ml  file_error.mli
lib/graph/: dependency_graph.ml  dependency_graph.mli  dune  graph_builder.ml  graph_builder.mli
lib/interp/: backquote.ml  backquote.mli  builtin.ml  builtin.mli  dune  env.ml  env.mli  eval.ml  eval.mli  expand.ml  expand.mli  interp.ml  interp.mli  value.ml  value.mli
lib/log/: dune  log.ml  log.mli
lib/lsp/: call_hierarchy.ml  call_hierarchy.mli  code_action.ml  code_action.mli  code_lens.ml  code_lens.mli  completion.ml  completion.mli  document.ml  document.mli  dune  folding.ml  folding.mli  form_cache.ml  form_cache.mli  graph_tracker.ml  graph_tracker.mli  inlay_hints.ml  inlay_hints.mli  protocol.ml  protocol.mli  rpc.ml  rpc.mli  semantic_tokens.ml  semantic_tokens.mli  server.ml  server.mli  signature_help.ml  signature_help.mli  signature_tracker.ml  signature_tracker.mli  span_conv.ml  span_conv.mli  type_hierarchy.ml  type_hierarchy.mli  uri.ml  uri.mli  worker.ml  worker.mli  workspace_symbols.ml  (+1 more)
lib/memory_stats/: dune  memory_stats.ml  memory_stats.mli
lib/oracle/: compare.ml  compare.mli  dune  emacs_reader.ml  emacs_reader.mli
lib/roundtrip/: dune  roundtrip.ml  roundtrip.mli
lib/sig/: dune  emacs_version.ml  emacs_version.mli  forall_infer.ml  forall_infer.mli  package_header.ml  package_header.mli  prelude.ml  prelude.mli  search_path.ml  search_path.mli  sig_ast.ml  sig_ast.mli  sig_convert.ml  sig_convert.mli  sig_loader.ml  sig_loader.mli  sig_parser.ml  sig_parser.mli  sig_validation.ml  sig_validation.mli
lib/syntax/: dune  lexer.mll  location.ml  location.mli  parse_state.ml  parse_state.mli  parser.mly  print.ml  print.mli  read.ml  read.mli  sexp.ml  sexp.mli  syntax.ml  syntax.mli
lib/test_harness/: acceptance.ml  acceptance.mli  dune
lib/timing/: dune  timing.ml  timing.mli
lib/typing/: ansi.ml  ansi.mli  builtin_types.ml  builtin_types.mli  check.ml  check.mli  clause_dispatch.ml  clause_dispatch.mli  constraint.ml  constraint.mli  defun_infer.ml  defun_infer.mli  diagnostic.ml  diagnostic.mli  diagnostic_format.ml  diagnostic_format.mli  dune  exhaustiveness.ml  exhaustiveness.mli  generalize.ml  generalize.mli  infer.ml  infer.mli  infer_types.ml  infer_types.mli  instance.ml  instance.mli  kind.ml  kind.mli  kind_infer.ml  kind_infer.mli  levenshtein.ml  levenshtein.mli  module_check.ml  module_check.mli  narrow.ml  narrow.mli  pcase_infer.ml  pcase_infer.mli  row_dispatch.ml  (+5 more)
lisp/: .pre-commit-config.yaml  prek.toml  tart-e2e-tests.el  tart-mode-tests.el  tart-mode.el  tart-mode.tart  tart-test-helpers.el  tart-tests.el  tart.el  tart.tart
research/: design-proposals.md  elisp-analysis.md  elisp-global-state.md  elisp-special-forms.md  error-messages.md  gradual-typing.md  macro-typing.md  synthesis.md
scripts/: dune-fmt-hook.sh  run-emacs-tests.sh  run-roundtrip.sh
specs/: 01-research.md  02-elisp-analysis.md  04-elisp-parser.md  04a-project-setup.md  07-signature-files.md  08-lsp-server.md  09-cli-interface.md  10-emacs-integration.md  100-emacs-source-acquisition.md  101-emacs-coverage-remote-sources.md  11-adt-system.md  12-module-boundaries.md  13-error-reporting.md  14-tart-el.md  15-explicit-forall.md  15-forall-inference.md  16-prek-migration.md  17-higher-kinded-types.md  18-explicit-instantiation.md  19-scoped-type-variables.md  20-expanded-stdlib.md  21-e2e-test-harness.md  21-type-classes.md  22-ci-releases.md  23-binary-installation.md  24-versioned-typings.md  25-typechecker-test-harness.md  26-lsp-signature-sync.md  27-dependency-graph.md  28-coverage-report.md  29-emacs-coverage.md  (+71 more)
test/coverage/: c_scanner_test.ml  coverage_report_test.ml  coverage_table_test.ml  definition_extractor_test.ml  dune  emacs_coverage_test.ml  emacs_source_test.ml  file_scanner_test.ml  report_format_test.ml
test/lsp/: code_action_test.ml  document_test.ml  dune  folding_test.ml  form_cache_test.ml  graph_tracker_test.ml  inlay_hints_test.ml  rpc_test.ml  semantic_tokens_test.ml  server_test.ml  signature_tracker_test.ml
test/lsp_integration/: dune  integration_test.ml  subprocess_client.ml  subprocess_client.mli
test/test_harness/: acceptance_test.ml  dune  fixture_test.ml
test/typing/: check_test.ml  clause_dispatch_test.ml  diagnostic_test.ml  dune  exhaustiveness_test.ml  generalize_test.ml  infer_test.ml  instance_test.ml  kind_infer_test.ml  kind_test.ml  levenshtein_test.ml  module_check_test.ml  narrow_guard_test.ml  narrow_test.ml  row_dispatch_test.ml  source_excerpt_test.ml  types_test.ml  unify_test.ml
(+390 files in other folders)
