(library
 (name tart)
 (public_name tart)
 (libraries
  yojson
  unix
  tart.syntax
  tart.interp
  tart.core
  tart.typing
  tart.sig
  tart.lsp
  tart.graph
  tart.coverage
  tart.errors
  tart.oracle
  tart.cache
  tart.corpus
  tart.log
  tart.timing
  tart.memory_stats
  tart.roundtrip)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))
