(test
 (name definition_extractor_test)
 (libraries coverage syntax alcotest))

(test
 (name file_scanner_test)
 (libraries coverage alcotest))

(test
 (name coverage_report_test)
 (libraries coverage core syntax alcotest))

(test
 (name report_format_test)
 (libraries coverage syntax str alcotest))

(test
 (name emacs_source_test)
 (libraries coverage str alcotest))

(test
 (name c_scanner_test)
 (libraries coverage unix alcotest))
