(test
 (name rpc_test)
 (libraries tart str alcotest))

(test
 (name server_test)
 (libraries tart str alcotest)
 (deps
  (source_tree %{project_root}/typings))
 (action
  (chdir
   %{project_root}
   (run %{test}))))

(test
 (name document_test)
 (libraries tart alcotest))

(test
 (name form_cache_test)
 (libraries tart alcotest)
 (deps
  (source_tree %{project_root}/typings))
 (action
  (chdir
   %{project_root}
   (run %{test}))))

(test
 (name graph_tracker_test)
 (libraries tart alcotest))

(test
 (name signature_tracker_test)
 (libraries tart alcotest))
