(test
 (name rpc_test)
 (modules rpc_test)
 (libraries tart str alcotest))

(test
 (name server_test)
 (modules server_test)
 (libraries tart lsp_client alcotest)
 (deps
  (source_tree %{project_root}/typings))
 (action
  (chdir
   %{project_root}
   (run %{test}))))

(test
 (name document_test)
 (modules document_test)
 (libraries tart alcotest))

(test
 (name form_cache_test)
 (modules form_cache_test)
 (libraries tart alcotest)
 (deps
  (source_tree %{project_root}/typings))
 (action
  (chdir
   %{project_root}
   (run %{test}))))

(test
 (name graph_tracker_test)
 (modules graph_tracker_test)
 (libraries tart alcotest))

(test
 (name signature_tracker_test)
 (modules signature_tracker_test)
 (libraries tart alcotest))

(test
 (name code_action_test)
 (modules code_action_test)
 (libraries tart.lsp alcotest))
