(test
 (name acceptance_test)
 (modules acceptance_test)
 (libraries test_harness alcotest))

(test
 (name fixture_test)
 (modules fixture_test)
 (libraries test_harness alcotest)
 (deps
  %{bin:tart}
  (source_tree ../fixtures/typing)
  (source_tree ../../typings))
 (action
  (chdir
   %{project_root}
   (setenv
    TART_BIN
    %{bin:tart}
    (run %{test})))))
