(test
 (name types_test)
 (libraries tart alcotest))

(test
 (name infer_test)
 (libraries tart alcotest))

(test
 (name unify_test)
 (libraries tart alcotest))

(test
 (name generalize_test)
 (libraries tart alcotest))

(test
 (name check_test)
 (libraries tart alcotest str))

(test
 (name diagnostic_test)
 (libraries tart alcotest str))

(test
 (name module_check_test)
 (libraries tart alcotest unix))

(test
 (name exhaustiveness_test)
 (libraries tart alcotest))

(test
 (name kind_test)
 (libraries tart alcotest))

(test
 (name kind_infer_test)
 (libraries tart alcotest))

(test
 (name instance_test)
 (libraries tart alcotest))
